<resources>
    <string name="app_name">CandyStore</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">CandyStore</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>
    <string name="reset">reset</string>


</resources>