<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.candystore.MainActivity">
<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_settings"-->
<!--        app:showAsAction="never" />-->

<!--    <item android:title="@string/add" app:showAsAction="ifRoom" android:id="@+id/action_add"/>-->
<!--    <item android:title="@string/delete" app:showAsAction="ifRoom" android:id="@+id/action_delete" />-->
<!--    <item android:title="@string/update" app:showAsAction="ifRoom" android:id="@+id/action_update" />-->


        <item android:title="@string/add" app:showAsAction="ifRoom" android:id="@+id/action_add" android:icon="@android:drawable/ic_menu_add"/>
    <item android:title="@string/delete" app:showAsAction="ifRoom" android:id="@+id/action_delete" android:icon="@android:drawable/ic_menu_delete"/>
    <item android:title="@string/update" app:showAsAction="ifRoom" android:id="@+id/action_update" android:icon="@android:drawable/ic_menu_edit"/>
    <item android:title="@string/reset" app:showAsAction="ifRoom" android:id="@+id/action_reset" android:icon="@drawable/ic_reset"/>


</menu>