<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/input_name"
        android:inputType="text"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_name"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="-9dp"
        android:layout_toRightOf="@+id/label_name"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:layout_marginTop="50dp"
        android:text="@string/label_price" />

    <EditText
        android:id="@+id/input_price"
        android:inputType="numberDecimal"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_price"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="-9dp"
        android:layout_toRightOf="@+id/label_price"
        android:orientation="horizontal" />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/button_add"
        android:layout_marginTop="50dp" android:id="@+id/button_add" android:layout_below="@+id/label_price"
        android:onClick="insert" android:layout_centerHorizontal="true"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/button_back"
        android:layout_marginTop="50dp" android:id="@+id/button_back" android:layout_below="@+id/button_add"
        android:onClick="goBack" android:layout_centerHorizontal="true"/>


</RelativeLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->